--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.5",
+    "primevue": "^4.2.5",
+    "tailwindcss-primeui": "^0.4.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.2.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
+    "unplugin-vue-components": "^28.4.0",
     "vite": "^6.1.0",
     "vue-tsc": "^2.2.0"
   }
